# Sunset-Score

./: .gitattributes  .gitignore  README.md  README_CN.md  pyproject.toml
src/sunsetscore/: __init__.py  aggregation.py  api.py  arguments.py  cli.py  config.py  discovery.py  errors.py  image_service.py  imaging.py  independent.py  log.py  results.py  score_file.py  score_file_schema.py  service.py  termination.py  version.py
src/sunsetscore/autopack/: __init__.py  packer.py  settings.py
src/sunsetscore/inference/: __init__.py  batch.py  command.py  parser.py  prompt.py  protocol.py  runner.py  scheduling.py  server.py  settings.py
src/sunsetscore/reporting/: __init__.py  independent.py  markdown.py
src/sunsetscore/runtime/: __init__.py  archive.py  devices.py  download.py  install.py  lock.py  paths.py  probe.py  specs.py
tests/: test_acceleration.py  test_aggregation.py  test_autopack.py  test_autopack_failures.py  test_cleanup.py  test_cli.py  test_cli_gpu.py  test_cli_output.py  test_concurrent_inference.py  test_config.py  test_discovery.py  test_image_service.py  test_imaging.py  test_independent.py  test_inference.py  test_runtime.py  test_scheduling.py  test_score_cache.py  test_server.py  test_service.py  test_termination.py
