[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sunsetscore"
version = "0.7.0"
description = "Score the likelihood of sunset glow in sampled photos with a local vision-language model."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SunsetScore contributors" }
]
dependencies = [
  "Pillow>=10.0",
  "platformdirs>=4.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
sunsetscore = "sunsetscore.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
